acc recovery logic

--- a/src/api/Jsm33t.API/appsettings.Development.json
+++ b/src/api/Jsm33t.API/appsettings.Development.json
@@ -27,7 +27,7 @@
     ]
   },
   "Jsm33tConfig": {
-    "ConnectionString": "Data Source=localhost;Initial Catalog=almondcove_db;Trusted_Connection=True;Integrated Security=SSPI;TrustServerCertificate=True",
+    "ConnectionString": "Data Source=localhost;Initial Catalog=jsm33t_db;Trusted_Connection=True;Integrated Security=SSPI;TrustServerCertificate=True",
     "Cryptography": {
       "Key": "",
       "IV": ""
