update route logic for netlify

--- a/src/ui/angular.json
+++ b/src/ui/angular.json
@@ -20,8 +20,9 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
-                "glob": "**/*",
-                "input": "public"
+                "glob": "_redirects",
+                "input": "src",
+                "output": "/"
               },
               "src/assets"
             ],
