:rocket: major upd and refactor

--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prerender": "ng run UI:prerender"
+    "prerender": "ng run UI:prerender",
+    "prettify":" npx prettier --write \"src/**/*.ts\" \"src/**/*.ts\" \"src/**/*.html\" \"src/**/*.component.html\""
   },
   "private": true,
   "dependencies": {
