--- a/src/ui/src/.prettierrc
+++ b/src/ui/src/.prettierrc
@@ -8,6 +8,15 @@
         "useTabs": true,
         "htmlWhitespaceSensitivity": "ignore"
       }
-    }
+    },
+    {
+        "files": "*.ts",
+        "options": {
+          "printWidth": 512,
+          "tabWidth": 4,
+          "useTabs": true,
+          "htmlWhitespaceSensitivity": "ignore"
+        }
+      }
   ]
 }
