:art: update sun

--- a/src/api/Jsm33t.API/appsettings.Development.json
+++ b/src/api/Jsm33t.API/appsettings.Development.json
@@ -31,6 +31,9 @@
     "Cryptography": {
       "Key": "",
       "IV": ""
+    },
+    "Paths": {
+      "CDNURL": "http://192.168.29.178:8080"
     }
   },
   "RateLimiting": {
