--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -25,6 +25,7 @@
     "aos": "^2.3.4",
     "imagesloaded": "^5.0.0",
     "jwt-decode": "^4.0.0",
+    "lightgallery": "^2.7.2",
     "marked": "^14.0.0",
     "parallax-js": "^3.1.0",
     "rxjs": "~7.8.0",
