:rocket: attemp to fix blog view

--- a/src/api/Jsm33t.API/appsettings.Development.json
+++ b/src/api/Jsm33t.API/appsettings.Development.json
@@ -27,7 +27,8 @@
     ]
   },
   "Jsm33tConfig": {
-    "ConnectionString": "Data Source=localhost;Initial Catalog=jsm33t_db;Trusted_Connection=True;Integrated Security=SSPI;TrustServerCertificate=True",
+    "ConnectionString2": "Data Source=localhost;Initial Catalog=jsm33t_db;Trusted_Connection=True;Integrated Security=SSPI;TrustServerCertificate=True",
+    "ConnectionString": "Data Source=wish.grabweb.in,5422;Initial Catalog=almondcove_db;User ID=jsm33t;Password=?mA9j005f;TrustServerCertificate=True",
     "Cryptography": {
       "Key": "",
       "IV": ""
