--- a/src/api/Jsm33t.API/appsettings.Development.json
+++ b/src/api/Jsm33t.API/appsettings.Development.json
@@ -27,11 +27,29 @@
     ]
   },
   "Jsm33tConfig": {
-    "ConnectionString2": "Data Source=localhost;Initial Catalog=jsm33t_db;Trusted_Connection=True;Integrated Security=SSPI;TrustServerCertificate=True",
-    "ConnectionString": "Data Source=wish.grabweb.in,5422;Initial Catalog=almondcove_db;User ID=jsm33t;Password=?mA9j005f;TrustServerCertificate=True",
-    "Cryptography": {
-      "Key": "",
+    "ConnectionString": "Data Source=localhost;Initial Catalog=jsm33t_db;Trusted_Connection=True;Integrated Security=SSPI;TrustServerCertificate=True",
+   "Cryptography": {
+      "Key": "AAECAwQFBgcICQoLDA0ODwjj",
       "IV": ""
+    },
+    "JwtSettings": {
+      "ValidIssuer": "https://api.jsm33t.me",
+      "ValidAudience": "https://api.jsm33t.me",
+      "IssuerSigningKey": "yourissuerkey=====sds=="
+    },
+    "SmtpSettings": {
+      "Server": "mail.maildomain.me",
+      "Port": 1212,
+      "Username": "username",
+      "Password": "some pass",
+      "FromName": "your mail",
+      "FromEmail": "mail@mail.mail",
+      "EnableSSL": true
+    },
+    "TelegramBot": {
+      "BotToken": "nana",
+      "LogChatId": "12121212",
+      "LogToTele": "false"
     },
     "Paths": {
       "CDNURL": "http://192.168.29.178:8080"
