:rocket: added reload on signout + false key

--- a/src/api/Jsm33t.API/appsettings.Development.json
+++ b/src/api/Jsm33t.API/appsettings.Development.json
@@ -28,14 +28,10 @@
   },
   "Jsm33tConfig": {
     "ConnectionString": "Data Source=localhost;Initial Catalog=jsm33t_db;Trusted_Connection=True;Integrated Security=SSPI;TrustServerCertificate=True",
-   "Cryptography": {
-      "Key": "AAECAwQFBgcICQoLDA0ODwjj",
-      "IV": ""
-    },
     "JwtSettings": {
       "ValidIssuer": "https://api.jsm33t.me",
       "ValidAudience": "https://api.jsm33t.me",
-      "IssuerSigningKey": "yourissuerkey=====sds=="
+      "IssuerSigningKey_": "yourissuerkey=====sds=="
     },
     "SmtpSettings": {
       "Server": "mail.maildomain.me",
