:rocket: attemp google login #1

--- a/src/api/Jsm33t.Repositories/Jsm33t.Repositories.csproj
+++ b/src/api/Jsm33t.Repositories/Jsm33t.Repositories.csproj
@@ -1,21 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>disable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.1.35" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Dapper" Version="2.1.35" />
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+		<PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Jsm33t.Entities\Jsm33t.Entities.csproj" />
-    <ProjectReference Include="..\Jsm33t.Library\Jsm33t.Library.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Jsm33t.Entities\Jsm33t.Entities.csproj" />
+		<ProjectReference Include="..\Jsm33t.Library\Jsm33t.Library.csproj" />
+	</ItemGroup>
 
 </Project>
