--- a/src/api/Jsm33t.API/Jsm33t.API.csproj
+++ b/src/api/Jsm33t.API/Jsm33t.API.csproj
@@ -15,6 +15,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.1" />
