--- a/src/api/Jsm33t.API/appsettings.Development.json
+++ b/src/api/Jsm33t.API/appsettings.Development.json
@@ -1,14 +1,14 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Warning"
     }
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Async" ],
-    "MinimumLevel": "Information",
+    "MinimumLevel": "Warning",
     "WriteTo": [
       {
         "Name": "Async",
@@ -28,25 +28,6 @@
   },
   "Jsm33tConfig": {
     "ConnectionString": "Data Source=localhost;Initial Catalog=jsm33t_db;Trusted_Connection=True;Integrated Security=SSPI;TrustServerCertificate=True",
-    "JwtSettings": {
-      "ValidIssuer": "https://api.jsm33t.me",
-      "ValidAudience": "https://api.jsm33t.me",
-      "IssuerSigningKey_": "yourissuerkey=====sds=="
-    },
-    "SmtpSettings": {
-      "Server": "mail.maildomain.me",
-      "Port": 1212,
-      "Username": "username",
-      "Password": "some pass",
-      "FromName": "your mail",
-      "FromEmail": "mail@mail.mail",
-      "EnableSSL": true
-    },
-    "TelegramBot": {
-      "BotToken": "nana",
-      "LogChatId": "12121212",
-      "LogToTele": "false"
-    },
     "Paths": {
       "CDNURL": "http://localhost:8080"
     }
@@ -59,7 +40,7 @@
     },
     "Routes": {
       "api/messages/send": {
-        "PermitLimit": 20,
+        "PermitLimit": 5,
         "Window": "00:01:00",
         "QueueLimit": 0
       }
